Import of RKHILL/Astro-Sunrise-0.03 from CPAN.
gitpan-cpan-distribution: Astro-Sunrise
gitpan-cpan-version:      0.03
gitpan-cpan-path:         RKHILL/Astro-Sunrise-0.03.tar.gz
gitpan-cpan-author:       RKHILL
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -4,3 +4,8 @@ Revision history for Perl extension sunrise.
 	- original version; created by h2xs 1.18
 0.02  Tues Jun 20 08:30:00 2000
         - Added code to convert to local time. R.Hill
+0.03  Thurs Feb 15 08:30:00 2001
+        - Added copyright information
+        - fixed bug for converting to local time
+        - updated documentation
+
