--- a/README
+++ b/README
@@ -1,8 +1,74 @@
-To install this module type
-perl Makefile.PL
-make
-make test
-make install
-To see the documentation for the module type
-perldoc Astro::Sunrise
- 
+NAME
+    Astro::Sunrise - Perl extension for computing the sunrise/sunset on a given day
+
+SYNOPSIS
+      use Astro::Sunrise;
+      
+      ($sunrise, $sunset) = sunrise(YYYY,MM,DD,longitude,latitude,Time Zone,DST);
+
+DESCRIPTION
+  
+   This module will return the sunrise/sunset for a given day. 
+   
+   Eastern longitude is entered as a positive number
+   Western longitude is entered as a negative number
+   Northern latitude is entered as a positive number
+   Southern latitude is entered as a negative number
+       There are a number of altitides to chose from, I have chosen
+       -0.833 because this is what most countries use. Feel free to 
+       change it if you need to. Here is the list:
+       h = 0 degrees: Center of Sun's disk touches a mathematical horizon
+       h = -0.25 degrees: Sun's upper limb touches a mathematical horizon
+       h = -0.583 degrees: Center of Sun's disk touches the horizon; atmospheric refraction accounted for
+       h = -0.833 degrees: Sun's supper limb touches the horizon; atmospheric refraction accounted for
+       h = -6 degrees: Civil twilight (one can no longer read outside without artificial illumination)
+       h = -12 degrees: Nautical twilight (navigation using a sea horizon no longer possible)
+       h = -15 degrees: Amateur astronomical twilight (the sky is dark enough for most astronomical observations)
+       h = -18 degrees: Astronomical twilight (the sky is completely dark)
+
+  sunrise
+
+        ($sunrise, $sunset) = sunrise(YYYY,MM,DD,longitude,latitude,Time Zone,DST);
+        ($sunrise, $sunset) = sunrise( 2001, 3, 10, 17.384, 98.625, -5, 0 );
+
+    Returns the sunrise and sunset times, in HH:MM format. (Note: Time Zone is the offset from GMT and DST is daylight
+    savings time, 1 means DST is in effect and 0 is not.
+
+AUTHOR
+    Ron Hill rkhill@pacbell.net
+
+    Many thanks also go to Paul Schlyer, Stockholm, Sweden for his excellent web page on the subject.
+
+CREDITS
+    Thanks very much to:
+
+    Rich Bowen (rbowen@rbowen.com)
+    for suggestions
+
+COPYRIGHT and LICENSE
+    Here is the copyright information provided by Paul Schlyer:
+
+    Written as DAYLEN.C, 1989-08-16
+
+    Modified to SUNRISET.C, 1992-12-01
+
+    (c) Paul Schlyter, 1989, 1992
+
+    Released to the public domain by Paul Schlyter, December 1992
+
+    Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated
+    documentation files (the "Software"), to deal in the Software without restriction, including without limitation the
+    rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit
+    persons to whom the Software is furnished to do so, subject to the following conditions:
+
+    The above copyright notice and this permission notice shall be included in all copies or substantial portions of the
+    Software.
+
+    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE
+    WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHOR BE
+    LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT
+    OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+
+SEE ALSO
+    perl(1).
+
