Import of RKHILL/Astro-Sunrise-0.05 from CPAN.
gitpan-cpan-distribution: Astro-Sunrise
gitpan-cpan-version:      0.05
gitpan-cpan-path:         RKHILL/Astro-Sunrise-0.05.tar.gz
gitpan-cpan-author:       RKHILL
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -42,8 +42,8 @@ AUTHOR
 CREDITS
     Thanks very much to:
 
-    Rich Bowen (rbowen@rbowen.com)
-    for suggestions
+    Rich Bowen (rbowen@rbowen.com) for suggestions
+    Adrian Blockley [adrian.blockley@environ.wa.gov.au] for finding a bug in the conversion to local time
 
 COPYRIGHT and LICENSE
     Here is the copyright information provided by Paul Schlyer:
