--- a/Changes
+++ b/Changes
@@ -21,4 +21,6 @@ Revision history for Perl extension sunrise.
       referencing values as global variables anyway. Oh, yeah, and I generated
       the README with pod2text so that the README on CPAN will be a little
       more informative. R.Bowen
-
+0.05  Wed Oct 17 7:00:00 2001
+       - Fixed bug for converting to local time for points east of GMT
+         Thanks to Adrian Blockley [adrian.blockley@environ.wa.gov.au] 
