Import of RKHILL/Astro-Sunrise-0.8 from CPAN.
gitpan-cpan-distribution: Astro-Sunrise
gitpan-cpan-version:      0.8
gitpan-cpan-path:         RKHILL/Astro-Sunrise-0.8.tar.gz
gitpan-cpan-author:       RKHILL
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -35,3 +35,5 @@ Revision history for Perl extension sunrise.
 0.7   Fri Feb 14 2003
       Fixed a bug in dependency, Added Iteration function, Added
       documentation for subs
+0.8   Changed the dependency from Time::Object to Time::Piece
+      (shame on me)
