Import of RKHILL/Astro-Sunrise-0.91 from CPAN.
gitpan-cpan-distribution: Astro-Sunrise
gitpan-cpan-version:      0.91
gitpan-cpan-path:         RKHILL/Astro-Sunrise-0.91.tar.gz
gitpan-cpan-author:       RKHILL
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -44,3 +44,6 @@ Revision history for Perl extension sunrise.
 0.90  Updated the convert_hour sub, This was badly broken Patch from
       Chris Phillps applied. Added Constants for Altitude provided by
       Brian dfoy.
+0.91  Major update to the test script 001basic.t I have added many tests
+      for cities around the world. Changed the convert_hour sub to format
+      the hour (add a zero).
