--- a/README
+++ b/README
@@ -29,7 +29,7 @@ DESCRIPTION
     inter is set to either 0 or 1. If set to 0 no Iteration will occur. If
     set to 1 Iteration will occur. Default is 0.
 
-    There are a number of sun altitides to chose from. The default is -0.833
+    There are a number of sun altitudes to chose from. The default is -0.833
     because this is what most countries use. Feel free to specify it if you
     need to. Here is the list of values to specify altitude (ALT) with:
 
@@ -79,7 +79,7 @@ USAGE
         Notes on Iteration
             ($sunrise, $sunset) = sunrise(YYYY,MM,DD,longitude,latitude,Time
             Zone,DST,ALT,inter);
-                The orginal method only gives an approximate value of the
+                The original method only gives an approximate value of the
                 Sun's rise/set times. The error rarely exceeds one or two
                 minutes, but at high latitudes, when the Midnight Sun soon
                 will start or just has ended, the errors may be much larger.
@@ -156,7 +156,7 @@ SPECIAL THANKS
 
 
 CREDITS
-        Paul Schlyer, Stockholm, Sweden
+        Paul Schlyter, Stockholm, Sweden
             for his excellent web page on the subject.
 
         Rich Bowen (rbowen@rbowen.com)
@@ -169,7 +169,7 @@ CREDITS
         http://aa.usno.navy.mil/data/docs/RS_OneYear.html
 
 COPYRIGHT and LICENSE
-        Here is the copyright information provided by Paul Schlyer:
+        Here is the copyright information provided by Paul Schlyter:
 
         Written as DAYLEN.C, 1989-08-16
 
